--- a/index.html
+++ b/index.html
@@ -6,21 +6,66 @@
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
+			#blocker {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0,0,0,0.5);
+			}
+
+			#instructions {
+				width: 100%;
+				height: 100%;
+
+				display: -webkit-box;
+				display: -moz-box;
+				display: box;
+
+				-webkit-box-orient: horizontal;
+				-moz-box-orient: horizontal;
+				box-orient: horizontal;
+
+				-webkit-box-pack: center;
+				-moz-box-pack: center;
+				box-pack: center;
+
+				-webkit-box-align: center;
+				-moz-box-align: center;
+				box-align: center;
+
+				color: #ffffff;
+				text-align: center;
+				font-family: Arial;
+				font-size: 14px;
+				line-height: 24px;
+
+				cursor: pointer;
+			}
 		</style>
 	</head>
 	<body>
+		<div id="blocker">
+			<div id="instructions">
+				<span style="font-size:36px">Click to float!</span>
+				<br /><br />
+				Move: W-A-S-D<br/>
+				Look: MOUSE
+			</div>
+
+		</div>
 		<script src="three.js"></script>
-<!-- 		<script src="orbitControls.js"></script>
-		<script src="pointerLockControl.js"></script> -->
+		<script src="orbitControls.js"></script>
 		<script type="text/javascript" src="anime.min.js"></script>
-		<script>
+		<script type="module">
+			import { PointerLockControls } from './PointerLockControls.js';
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			const renderer = new THREE.WebGLRenderer();
+			const controls = new PointerLockControls( camera, document.body );
 			renderer.setSize(window.innerWidth, window.innerHeight);
 
 			// THIS IS WHERE WE ADDING OUR CANVAS
-			document.body.appendChild( renderer.domElement );
+			document.body.appendChild(renderer.domElement);
 
 			const resizeCanvas = () => {
 			    camera.aspect = window.innerWidth / window.innerHeight;
@@ -103,22 +148,24 @@
 			var topVal = 0;
 
 		      const moveCamera = () => {
-		      	let speed = 0.5;
-		      	if (pressedKeys[16]) {
-		      		speed = 3;
+		      	if (controls.isLocked) {
+		      		let speed = 0.5;
+			      	if (pressedKeys[16]) {
+			      		speed = 3;
+			      	}
+			     	if (pressedKeys[87]) {
+			     		camera.translateZ(-speed);
+			     	} 
+			     	if (pressedKeys[83]){
+			     		camera.translateZ(speed);
+			     	}
+			     	if (pressedKeys[68]){
+			     		camera.translateX(speed);
+			     	}
+			     	if (pressedKeys[65]){
+			     		camera.translateX(-speed);
+			     	}
 		      	}
-		     	if (pressedKeys[87]) {
-		     		camera.translateZ(-speed);
-		     	} 
-		     	if (pressedKeys[83]){
-		     		camera.translateZ(speed);
-		     	}
-		     	if (pressedKeys[68]){
-		     		camera.translateX(speed);
-		     	}
-		     	if (pressedKeys[65]){
-		     		camera.translateX(-speed);
-		     	}
 		      }
 
 		    window.addEventListener("keydown", (event) => {
@@ -129,63 +176,81 @@
 				pressedKeys[event.keyCode] = false;
 			}, true);
 
-			window.addEventListener('mousemove', function(event) {
-			    mouseX = event.clientX;
-			    mouseY = event.clientY;
-			    if (mouseDown){
-			    	cameraLookAtX = (onClickPositionX - mouseX);
-			    	if (cameraLookAtX < 0){
-			    		if (cameraLookAtX <= topVal ) {
-			    			topVal = cameraLookAtX;
-			    		}else{
-			    			topVal = 0;
-			    			onClickPositionX = event.clientX;
-			    			camRotation = 0;
+			// window.addEventListener('mousemove', function(event) {
+			//     mouseX = event.clientX;
+			//     mouseY = event.clientY;
+			//     if (mouseDown){
+			//     	cameraLookAtX = (onClickPositionX - mouseX);
+			//     	if (cameraLookAtX < 0){
+			//     		if (cameraLookAtX <= topVal ) {
+			//     			topVal = cameraLookAtX;
+			//     		}else{
+			//     			topVal = 0;
+			//     			onClickPositionX = event.clientX;
+			//     			camRotation = 0;
 
-			    			return;
-			    		}
-			    	}else {
-			    		if (cameraLookAtX >= topVal ) {
-			    			topVal = cameraLookAtX;
-			    		}else{
-			    			topVal = 0;
-			    			onClickPositionX = event.clientX;
-			    			camRotation = 0;
-			    			return;
-			    		}
-			    	}
-			    	camRotation = cameraLookAtX;
-			    	cameraLookAtY = (onClickPositionY - mouseY);
-			    	camera.rotation.y += cameraLookAtX / 10000;
-			    	// console.log(camera.rotation.y);
-			    	// camera.rotateY(cameraLookAtX / 10000);
-			    	// camera.lookAt(0, cameraLookAtY++, 0);
-			    	// camera.rotateX(cameraLookAtX / 1000);
-			    	// camera.rotateZ(0);
-			    }else {
-			    	camRotation = 0;
-			    }
-			}, false);
+			//     			return;
+			//     		}
+			//     	}else {
+			//     		if (cameraLookAtX >= topVal ) {
+			//     			topVal = cameraLookAtX;
+			//     		}else{
+			//     			topVal = 0;
+			//     			onClickPositionX = event.clientX;
+			//     			camRotation = 0;
+			//     			return;
+			//     		}
+			//     	}
+			//     	camRotation = cameraLookAtX;
+			//     	cameraLookAtY = (onClickPositionY - mouseY);
+			//     	camera.rotation.y += cameraLookAtX / 10000;
+			//     	// console.log(camera.rotation.y);
+			//     	// camera.rotateY(cameraLookAtX / 10000);
+			//     	// camera.lookAt(0, cameraLookAtY++, 0);
+			//     	// camera.rotateX(cameraLookAtX / 1000);
+			//     	// camera.rotateZ(0);
+			//     }else {
+			//     	camRotation = 0;
+			//     }
+			// }, false);
 
-			window.addEventListener("mousedown", function(event) {
-			    mouseDown = true;
-			    onClickPositionX = event.clientX;
-			    onClickPositionY = event.clientY;
-			    camRotation = 0;
+			// window.addEventListener("mousedown", function(event) {
+			//     mouseDown = true;
+			//     onClickPositionX = event.clientX;
+			//     onClickPositionY = event.clientY;
+			//     camRotation = 0;
+			// }, false);
 
-			}, false);
-			window.addEventListener("mouseup", function(event) {
-			    mouseDown = false;
-			    onClickPositionX = 0;
-			    onClickPositionY = 0;
-			    camRotation = 0;
-			    topVal = 0;
-			}, false);
+			// window.addEventListener("mouseup", function(event) {
+			//     mouseDown = false;
+			//     onClickPositionX = 0;
+			//     onClickPositionY = 0;
+			//     camRotation = 0;
+			//     topVal = 0;
+			// }, false);
 
-			window.addEventListener( 'resize', resizeCanvas, false );
+			window.addEventListener('resize', resizeCanvas, false);
 
-		    scene.add(stars);
+		    var blocker = document.getElementById('blocker');
+			var instructions = document.getElementById('instructions');
+
+			instructions.addEventListener( 'click', function () {
+				controls.lock();
+			}, false );
+
+			controls.addEventListener( 'lock', function () {
+				instructions.style.display = 'none';
+				blocker.style.display = 'none';
+			} );
+
+			controls.addEventListener( 'unlock', function () {
+				blocker.style.display = 'block';
+				instructions.style.display = '';
+			} );
+
+			scene.add(stars);
 		    scene.add(cube);
+			scene.add(controls.getObject());
 
 			function animate(time){
 				requestAnimationFrame(animate);
