--- a/rocketLeague/index.html
+++ b/rocketLeague/index.html
@@ -5,7 +5,7 @@
 		<title>My first three.js app</title>
 		<link rel="shortcut icon" href="#">
 		<style>
-			body { margin: 0; }
+			body { margin: 0; background: radial-gradient(circle at center, white 0, grey 25%, black 100%) }
 			canvas { display: block; }
 		</style>
 	</head>
@@ -18,9 +18,9 @@
 			import { GLTFLoader } from '../GLTFLoader.js';
 
 			const scene = new THREE.Scene();
-			scene.background = new THREE.Color( 0x4E9AB9 );
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000 );
-			const renderer = new THREE.WebGLRenderer();
+			const renderer = new THREE.WebGLRenderer({ alpha: true } );
+			renderer.outputEncoding = THREE.sRGBEncoding;
 			renderer.setSize(window.innerWidth, window.innerHeight);
 
 			const controls = new OrbitControls( camera, renderer.domElement );
@@ -28,16 +28,23 @@
 			controls.dampingFactor = 0.05;
 			controls.screenSpacePanning = false;
 			controls.minDistance = 3;
-			controls.maxDistance = 20;
-			// controls.maxPolarAngle = Math.PI / 2;
+			controls.maxDistance = 7;
 
-			const directionalLight = new THREE.DirectionalLight( 0xffffff, 10 );
-			scene.add(directionalLight);
+			const setLights = () => {
+				const directionalLight = new THREE.DirectionalLight( 0xffffff, 5 );
+				directionalLight.position.y = 10;
+				scene.add(directionalLight);
 
-			const directionalLight2 = new THREE.DirectionalLight( 0xffffff, 10 );
-			directionalLight.position.z = 10;
-			directionalLight.position.x = 10;
-			scene.add(directionalLight2);
+				const directionalLight2 = new THREE.DirectionalLight( 0xffffff, 5 );
+				directionalLight2.position.x = 10;
+				directionalLight2.position.y = -5;
+				scene.add(directionalLight2);
+
+				const directionalLight3 = new THREE.DirectionalLight( 0xffffff, 5 );
+				directionalLight3.position.x = -10;
+				directionalLight3.position.y = -5;
+				scene.add(directionalLight3);
+			};
 
 			// THIS IS WHERE WE ADDING OUR CANVAS
 			document.body.appendChild(renderer.domElement);
@@ -51,37 +58,30 @@
 
 			const createPlane = () => {
 				const geometry = new THREE.PlaneGeometry( 5,5,5 );
-				const material = new THREE.MeshBasicMaterial( {color: 0x000000, side: THREE.DoubleSide} );
+				const material = new THREE.MeshBasicMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
 				const plane = new THREE.Mesh( geometry, material );
 				plane.rotateX( - Math.PI / 2);
 				plane.position.set(0,-0.43,0);
 				scene.add( plane );
 			}
+			
 			const loadRL = () => {
 				var loader = new GLTFLoader();
 
 				loader.load( 'RLModel/RL.gltf', function ( gltf ) {
-					// gltf.scene.position.z = -3;
-					// gltf.scene.rotation.x = -1;
-					// gltf.scene.rotation.y = -0.8;
 					scene.add( gltf.scene );
 				}, undefined, function ( error ) {
 					console.error( error );
 				} );
 			};
 			
-			createPlane();
+			// createPlane();
+			setLights();
 			loadRL();
 
 			window.addEventListener('resize', resizeCanvas, false);
 
-			// camera.position.set(0,0,0);
-			// camera.rotation.set(-3,30,3);
-			// controls.target = new THREE.Vector3(-0.90,-0.8,0.1);
-			camera.position.z = 0.8;
-			camera.position.x = 1;
-			camera.position.y = 0.6;
-			scene.add(new THREE.AxesHelper(1000));
+			camera.position.set(1,0.6,0.8);
 			controls.update();
 
 			function animate(){
