--- a/rocketLeague/index.html
+++ b/rocketLeague/index.html
@@ -10,12 +10,10 @@
 		</style>
 	</head>
 	<body>
-		<!-- <script src="../three.js"></script> -->
-		<script type="text/javascript" src="../anime.min.js"></script>
 		<script type="module">
-			import * as THREE from '../three.module.js';
-			import { OrbitControls } from '../OrbitControls.js';
-			import { GLTFLoader } from '../GLTFLoader.js';
+			import * as THREE from './three.module.js';
+			import { OrbitControls } from './OrbitControls.js';
+			import { GLTFLoader } from './GLTFLoader.js';
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000 );
