--- a/rocketLeague/index.html
+++ b/rocketLeague/index.html
@@ -12,8 +12,8 @@
 	<body>
 		<script type="module">
 			import * as THREE from './three.module.js';
-			import { OrbitControls } from './OrbitControls.js';
-			import { GLTFLoader } from './GLTFLoader.js';
+			import { OrbitControls } from './orbitControls.js';
+			import { GLTFLoader } from './gltfLoader.js';
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000 );
