--- a/rocketLeague/index.html
+++ b/rocketLeague/index.html
@@ -11,9 +11,9 @@
 	</head>
 	<body>
 		<script type="module">
-			import * as THREE from './three.module.js';
-			import { OrbitControls } from './orbitControls.js';
-			import { GLTFLoader } from './gltfLoader.js';
+			import * as THREE from '/three.module.js';
+			import { OrbitControls } from '/orbitControls.js';
+			import { GLTFLoader } from '/gltfLoader.js';
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000 );
@@ -66,7 +66,7 @@
 			const loadRL = () => {
 				var loader = new GLTFLoader();
 
-				loader.load( 'RLModel/RL.gltf', function ( gltf ) {
+				loader.load( '/rocketLeague/RLModel/RL.gltf', function ( gltf ) {
 					scene.add( gltf.scene );
 				}, undefined, function ( error ) {
 					console.error( error );
