--- a/rocketLeague/index.html
+++ b/rocketLeague/index.html
@@ -13,7 +13,7 @@
 		<script type="module">
 			import * as THREE from '/three.module.js';
 			import { OrbitControls } from '/orbitControls.js';
-			import { GLTFLoader } from '/gltfLoader.js';
+			import { GLTFLoader } from '/gltf.js';
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000 );
