--- a/snoutumn/index.html
+++ b/snoutumn/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Snow</title>
+		<title>Snoutumn</title>
 		<link rel="shortcut icon" href="#">
 		<style>
 			body { margin: 0; }
@@ -12,7 +12,6 @@
 				width: 100%;
 				height: 100%;
 			}
-
 			.slider {
 				position: absolute;
 				cursor: ew-resize;
@@ -25,40 +24,122 @@
 
 				top: calc(50% - 20px);
 				left: calc(50% - 20px);
-
+			}
+			.loadingDiv{
+				position: fixed;
+				width: 100%;
+				height: 100%;
+				left: 0;
+				top: 0;
+				background: rgba(0,0,0,0.9);
+				z-index: 10;
+			}
+			.lds-ellipsis {
+				display: inline-block;
+				width: 80px;
+				height: 80px;
+				position: absolute;
+				top:0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				margin: auto;
+			}
+			.lds-ellipsis div {
+				position: absolute;
+				top: 33px;
+				width: 13px;
+				height: 13px;
+				border-radius: 50%;
+				background: rgba(255,255,255,1);
+				animation-timing-function: cubic-bezier(0, 1, 1, 0);
+			}
+			.lds-ellipsis div:nth-child(1) {
+				left: 8px;
+				animation: lds-ellipsis1 0.6s infinite;
+			}
+			.lds-ellipsis div:nth-child(2) {
+				left: 8px;
+				animation: lds-ellipsis2 0.6s infinite;
+			}
+			.lds-ellipsis div:nth-child(3) {
+				left: 32px;
+				animation: lds-ellipsis2 0.6s infinite;
+			}
+			.lds-ellipsis div:nth-child(4) {
+				left: 56px;
+				animation: lds-ellipsis3 0.6s infinite;
+			}
+			@keyframes lds-ellipsis1 {
+				0% {
+					transform: scale(0);
+				}
+				100% {
+					transform: scale(1);
+				}
+			}
+			@keyframes lds-ellipsis3 {
+				0% {
+					transform: scale(1);
+				}
+				100% {
+					transform: scale(0);
+				}
+			}
+			@keyframes lds-ellipsis2 {
+				0% {
+					transform: translate(0, 0);
+				}
+				100% {
+					transform: translate(24px, 0);
+				}
 			}
 		</style>
 	</head>
 	<body>
+		<div class="loadingDiv">
+			<div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+		</div>
 		<div class="container">
 			<div class="slider"></div>
 		</div>
 		<script type="module">
 			import * as THREE from '/three.module.js';
 
-			var camera, sceneL, sceneR, renderer, container;
-			var cube, sphere, torus, material;
-			var cube2, sphere2, torus2, material2;
+			var camera, sceneL, sceneR, renderer, container,
+				cube, sphere, torus, material,
+				cube2, sphere2, torus2, material2,
+				loadingManager,
 
-			var sliderPos = window.innerWidth / 2;
-			var sliderMoved = false;
+				sliderPos = window.innerWidth / 2,
+				sliderMoved = false,
 
-			var count = 0, cubeCamera1R, cubeCamera2R,cubeCamera1L, cubeCamera2L;
+				count = 0, cubeCamera1R, cubeCamera2R,cubeCamera1L, cubeCamera2L,
 
-			var onPointerDownPointerX, onPointerDownPointerY, onPointerDownLon, onPointerDownLat;
+				onPointerDownPointerX, onPointerDownPointerY, onPointerDownLon, onPointerDownLat,
 
-			var lon = 0, lat = 0;
-			var phi = 0, theta = 0;
+				lon = 0, lat = 0,
+				phi = 0, theta = 0;
 
 
-			function init2() {
+			const getLoadingManager = (loadingDiv) => {
+				var manager = new THREE.LoadingManager();
+				manager.onLoad = function ( ) {
+					loadingDiv.style.display = "none";
+				};
+				return manager;
+			};
+
+			function init() {
+				loadingManager = getLoadingManager(document.querySelector( '.loadingDiv' ));
+
 				container = document.querySelector( '.container' );
 
 				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
 				camera.position.set( 2, 4, 7 );
 
-				initRight();
-				initLeft();
+				initRight(loadingManager);
+				initLeft(loadingManager);
 
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setSize( container.clientWidth, container.clientHeight );
@@ -111,17 +192,12 @@
 
 			};
 
-			function initRight() {
+			function initRight(loadingManager) {
 
 				sceneR = new THREE.Scene();
-				sceneR.background = new THREE.CubeTextureLoader()
+				sceneR.background = new THREE.CubeTextureLoader(loadingManager)
 					.setPath( '/snoutumn/snowForest/' )
 					.load( ['r0_0.jpg', 'l0_0.jpg', 'u0_0.jpg', 'd0_0.jpg', 'f0_0.jpg', 'b0_0.jpg' ] );
-
-				sceneR.background = new THREE.CubeTextureLoader()
-					.setPath( '/snoutumn/snowForest/' )
-					.load( ['r0_0.jpg', 'l0_0.jpg', 'u0_0.jpg', 'd0_0.jpg', 'f0_0.jpg', 'b0_0.jpg' ] );
-
 
 				// audio
 
@@ -172,9 +248,9 @@
 
 			}
 			
-			function initLeft() {
+			function initLeft(loadingManager) {
 				sceneL = new THREE.Scene();
-				sceneL.background = new THREE.CubeTextureLoader()
+				sceneL.background = new THREE.CubeTextureLoader(loadingManager)
 					.setPath( '/snoutumn/autumnForest/' )
 					.load( ['r0_0.jpg', 'l0_0.jpg', 'u0_0.jpg', 'd0_0.jpg', 'f0_0.jpg', 'b0_0.jpg' ] );
 
@@ -202,7 +278,6 @@
 				torus2 = new THREE.Mesh( new THREE.TorusKnotBufferGeometry( 10, 5, 100, 25 ), material2 );
 				sceneL.add( torus2 );
 			}
-
 
 			function onWindowResize() {
 				camera.aspect = container.clientWidth / container.clientHeight;
@@ -252,20 +327,7 @@
 
 			}
 
-			function animate() {
-				requestAnimationFrame( animate );
-				render();
-			}
-			
-			function render() {
-				var time = Date.now();
-
-				lon += .15;
-
-				lat = Math.max( - 85, Math.min( 85, lat ) );
-				phi = THREE.MathUtils.degToRad( 90 - lat );
-				theta = THREE.MathUtils.degToRad( lon );
-
+			function moveObjects(cube, torus, time) {
 				cube.position.x = Math.cos( time * 0.001 ) * 30;
 				cube.position.y = Math.sin( time * 0.001 ) * 30;
 				cube.position.z = Math.sin( time * 0.001 ) * 30;
@@ -279,20 +341,24 @@
 
 				torus.rotation.x += 0.02;
 				torus.rotation.y += 0.03;
+			}
 
-				cube2.position.x = Math.cos( time * 0.001 ) * 30;
-				cube2.position.y = Math.sin( time * 0.001 ) * 30;
-				cube2.position.z = Math.sin( time * 0.001 ) * 30;
+			function animate() {
+				requestAnimationFrame( animate );
+				render();
+			}
 
-				cube2.rotation.x += 0.02;
-				cube2.rotation.y += 0.03;
+			function render() {
+				var time = Date.now();
 
-				torus2.position.x = Math.cos( time * 0.001 + 10 ) * 30;
-				torus2.position.y = Math.sin( time * 0.001 + 10 ) * 30;
-				torus2.position.z = Math.sin( time * 0.001 + 10 ) * 30;
+				lon += .15;
 
-				torus2.rotation.x += 0.02;
-				torus2.rotation.y += 0.03;
+				lat = Math.max( - 85, Math.min( 85, lat ) );
+				phi = THREE.MathUtils.degToRad( 90 - lat );
+				theta = THREE.MathUtils.degToRad( lon );
+
+				moveObjects(cube, torus, time);
+				moveObjects(cube2, torus2, time);
 
 				camera.position.x = 100 * Math.sin( phi ) * Math.cos( theta );
 				camera.position.y = 100 * Math.cos( phi );
@@ -328,7 +394,8 @@
 				renderer.setScissor( sliderPos, 0, window.innerWidth, window.innerHeight );
 				renderer.render( sceneR, camera );
 			}
-			init2();
+
+			init();
 			animate();
 
 		</script>
